package com.packages.entity.collectible;

public class Gem extends Collectible {
    public Gem(int x, int y, int width, int height) {
        super(x, y, width, height);
    }
}
