package com.packages.entity.collectible;

public class Magnet extends Collectible {
    public Magnet(int x, int y, int sizeX, int sizeY) {
        super(x, y, sizeX, sizeY);
    }
}
