package com.packages.entity.collectible;

public class Meat extends Collectible {
    public Meat(int x, int y, int width, int height) {
        super(x, y, width, height);
    }
}
