package com.packages.entity.movableEntity.monster;

public class Dragon extends Monster {
    public Dragon(int x, int y, int width, int height) { super(x, y, width, height); }
}
