package com.packages.entity.movableEntity.monster;

public class Ghost extends Monster {
    public Ghost(int x, int y, int width, int height) { super(x, y, width, height); }
}
