package com.packages.entity.movableEntity.monster;

import com.packages.entity.movableEntity.MovableEntity;

public class Monster extends MovableEntity {

	public Monster (int x, int y, int width, int height) {
		super(x, y, width, height);
	}

	@Override
	public void move() {

	}
}