package com.packages.entity.movableEntity.monster;

public class Zombie extends Monster {
    public Zombie (int x, int y, int width, int height) { super(x, y, width, height); }
}
