package com.packages.entity.movableEntity.player.weapons;

public class Sword extends Weapons {
}
