package com.packages.entity.movableEntity.player.weapons;

public class Weapons {
}
