package com.packages.entity.structure;

public class Portal extends Structure {
    public Portal(int x, int y, int width, int height) { super(x, y, width, height); }
}
