package com.packages.entity.structure;

public class Rock extends Structure {
    public Rock(int x, int y, int width, int height) { super(x, y, width, height); }
}
