package com.packages.entity.structure;
import com.packages.entity.Entity;

public class Structure extends Entity {
    public Structure(int x, int y, int width, int height) { super(x, y, width, height); }
}
