package com.packages.entity.structure;

public class Wall extends Structure {
    public Wall(int x, int y, int width, int height) { super(x, y, width, height); }
}
