@startuml

abstract class Entity {
    - int x
    - int y
    - int width
    - int height
}

interface Movable {
    +void move()
}

interface Updatable {
    +void update()
}

abstract class MovableEntity
class Player

abstract class Competence

abstract class Weapons
class Dag
class Gun
class Sword

abstract class Monster
class Zombie
class Ghost
class Dragon

abstract class Collectible
class Gem
class Magnet
class Meat

abstract class Structure
class Rock
class Portal
class Wall

abstract class Map {
    - Entity entities

}

Map "1" *-- "1..*" Entity : contains
Entity <|-- MovableEntity : is
Updatable <|.. Entity : is
Movable <|.. MovableEntity : is
MovableEntity <|-- Monster : is
Monster <|-- Zombie : is
Monster <|-- Ghost : is
Monster <|-- Dragon : is
MovableEntity <|-- Player : is
Entity <|-- Collectible : is
Collectible <|-- Gem : is
Collectible <|-- Magnet : is
Collectible <|-- Meat : is
Entity <|-- Structure : is
Structure <|-- Rock : is
Structure <|-- Portal : is
Structure <|-- Wall : is
Player "1" *-- "0..6" Competence : has
Player "1" *-- "1" Weapons : has
Weapons <|-- Dag : is
Weapons <|-- Gun : is
Weapons <|-- Sword : is

@enduml